@@ -6,34 +6,11 @@
 . /etc/profile
 oe_setup_addon service.snapclient
 
-. /etc/os-release
-case "$LIBREELEC_ARCH" in
-  RPi*.arm)
-    if [ "$sc_a" == "true" ]; then
-      ALSA="/proc/asound/ALSA"
-      if [ ! -e "$ALSA" ]; then
-        echo "Starting Raspberry Pi onboard audio"
-        dtparam audio=on
-        sleep 1
-      fi
-      if [ -e "$ALSA" ]; then
-        echo "Setting Raspberry Pi onboard audio playback route"
-        index="$(readlink $ALSA)"
-        index="${index##*card}"
-        amixer -c "$index" cset name="PCM Playback Route" "$sc_r"
-      fi
-    fi
-    ;;
-esac
-
-[ -n "$sc_h" ] && sc_H="--hostID $sc_h"
-[ -n "$sc_s" ] && sc_S="--soundcard $sc_s"
-
 HOME="$ADDON_HOME" \
 nice -n "$sc_n" \
 snapclient \
-  $sc_H \
+  ${sc_h:+--hostID "$sc_h"} \
   --latency "$sc_l" \
   --port "$sc_p" \
-  $sc_S \
+  --soundcard pulse \
   > /dev/null
