@@ -1,10 +1,7 @@
 <settings version="2">
-    <setting id="sc_a" default="true">false</setting>
     <setting id="sc_h" default="true"></setting>
     <setting id="sc_k" default="true">false</setting>
     <setting id="sc_l" default="true">0</setting>
     <setting id="sc_n" default="true">-3</setting>
     <setting id="sc_p" default="true">1704</setting>
-    <setting id="sc_r" default="true">0</setting>
-    <setting id="sc_s" default="true"></setting>
 </settings>
