@@ -1,11 +1,11 @@
 [Unit]
 Description=Snapclient
-After=kodi.service network-online.target sound.target
-Requires=kodi.service network-online.target sound.target
+After=kodi.service
+Wants=kodi.service
 
 [Service]
 ExecStart=/bin/sh /storage/.kodi/addons/service.snapclient/bin/snapclient.start
 Restart=always
 
 [Install]
-WantedBy=kodi.target
+WantedBy=kodi.service
